--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy":"npm run build",
-    "deploy":"github-api -d build"
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
